Wrap salon name in a link for better navigation; update styles for logo links

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,15 @@ body {
     font-weight: bold;
 }
 
+.logo a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.logo a:hover {
+    opacity: 0.8;
+}
+
 .navigation ul {
     display: flex;
     list-style: none;
